Docs: Updated README. Stlye: Removed extra margins from index.html About us section becuase this was causing issues with responsiveness. Logo had incorrect font, swapped to Roboto and removed line-spacing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,7 @@ header {
 /*-----Logo-----*/
 
 .logo {
-    font-family: "Oswald", sans-serif;
-    font-weight: 500;
-    font-size: 10vw;
-    letter-spacing: 5px;
+    font-family: "Roboto", sans-serif;
     color: #fff;
     float: left;
     line-height: 70px;
@@ -116,8 +113,6 @@ a:hover {
 
 #about-us-text {
     color: #373940;
-    margin-left: 5px;
-    margin-right: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 100%;
@@ -125,16 +120,14 @@ a:hover {
 }
 
 #about-us-image {
+    background-size: contain;
     height: auto;
     width: auto; 
-    background-size: contain;
 }
 
 /*-----Lead Instructor-----*/
 #lead-instructor-text {
     color: #373940;
-    margin-left: 5px;
-    margin-right: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 100%;
@@ -155,10 +148,16 @@ a:hover {
     width: auto;  
 }
 
-#karate-benefits-text {
+#physical-benefits-text {
     color: #373940;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+    background-color: #fff;
+}
+
+#mental-benefits-text {
+    color: #373940;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 100%;
@@ -259,6 +258,22 @@ footer a {
     background-color: #fff;
     padding: 20px 20px 20px 20px;
 }
+
+.contact-map {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+
+.contact-map iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
 
 /*-----Training-----*/
 
